# fdtd-test

./: .gitignore  CMakeLists.txt  default.json  fdtd.cu  fdtd.cuh  main.cu  params.cu  params.cuh  params.json  plot.cu  plot.cuh
